--- a/web/src/components/User/Login/Login.css
+++ b/web/src/components/User/Login/Login.css
@@ -1,1 +1,317 @@
 @import '~antd/dist/antd.css';
+
+*{
+    --accent: #da8388;
+    --p-fg: #fff;
+    --p-bg: #333;
+    --s-fg: #ccc;
+    --accent: #da8388;
+    --shadow: rgba(0, 0, 0, 0.4);
+}
+
+#main-container {
+    background-color: #333;
+    display: flex;
+    position: relative;
+    flex-flow: column nowrap;
+    max-width: 100%;
+    width: 100%;
+    margin: 0 auto;
+    min-height: 100vh;
+  }
+
+#login-wrapper {
+    display: flex;
+    position: absolute;
+    margin: 0 auto;
+    top: 33vh;
+    left: 0px;
+    right: 0;
+    height: 300px;
+    width: 500px;
+    z-index: 1;
+    flex-flow: column nowrap;
+    justify-content: center;
+    padding: 36px;
+    background-color: #333;
+    box-shadow:2px 2px 10px 2px;
+}
+
+#auth-option-wrapper {
+    display: flex;
+    width: 300px;
+    flex-direction: row;
+    overflow: hidden;
+    border-radius: 8px;
+    border: solid var(--accent) 2px;
+}
+
+#auth-option {
+    cursor: pointer;
+    padding: 4px;
+    height: 30px;
+    box-sizing: border-box;
+    flex-basis: 0;
+    flex-grow: 1;
+    border-bottom: solid var(--p-fg) 0;
+    color: var(--accent);
+    transition: 0.5s;
+    transition-delay: 50ms;
+    text-align: center;
+    font-size: large;
+    font-weight: 500;
+}
+
+#auth-option:first-child {
+    border-right: solid var(--accent) 2px;
+}
+
+#auth-option:hover {
+    color:var(--p-fg);
+    background-color: var(--accent);
+}
+
+input {
+    background-color: transparent;
+    width: 25%;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: None;
+    border-radius: 0;
+    border-bottom: solid 2px var(--s-bg);
+    font-size: 18px;
+    line-height: 18px;
+    color: var(--p-fg);
+    transition: border-bottom 0.2s cubic-bezier(0.55, 0, 0.1, 1);
+    border-bottom: solid 2px rgb(88, 87, 87)
+}
+
+input:focus {
+    border-bottom: solid 2px var(--accent);
+}
+
+
+
+#email-code-input {
+    width: 198px;
+}
+
+#email-suffix {
+    position: absolute;
+    top: 10%;
+    left: 80px;
+    size: 2cm;
+    color: #C0C0C0;
+}
+
+#email-code-button {
+    position:absolute;
+    top:10%;
+    left:205px;
+    margin-left: 8px;
+    width: 56px;
+    border-radius: 10px;
+    color: #C0C0C0;
+    font-size: large;
+}
+
+#countdown {
+    position:absolute;
+    top:10%;
+    left:205px;
+    margin-left: 8px;
+    width: 56px;
+    border-radius: 10px;
+    color: #C0C0C0;
+    font-size: large;
+}
+
+#email-login-button {
+    display: absolute;
+    margin-left: 8px;
+    width:45px;
+    box-sizing:content-box;
+    text-align: center;
+    font-size: large;
+    border-radius: 10px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    border: solid var(--accent) 2px;
+    color: var(--p-fg);
+}
+
+#email-login-button:hover {
+    background-color: var(--accent);
+    color: var(--p-fg);
+}
+
+
+#footer {
+    position: absolute;
+    flex-grow: 1;
+    bottom: 10%;
+    max-height: 100px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    box-sizing: border-box;
+    padding: 30px 0 30px 0;
+    justify-content:center;
+}
+
+
+.small-button {
+    display: block;
+    position: relative;
+    width: 30px;
+    height: 30px;
+    margin: 8px;
+    border-radius: 15px;
+    border: solid 2px var(--accent);
+    padding: 0;
+    background-color: transparent;
+    color: var(--accent);
+    cursor: pointer;
+}
+
+.small-button>div {
+    filter: grayscale(1) brightness(1.6) contrast(5) brightness(0.8) sepia(1)
+            brightness(0.626) saturate(2.095) hue-rotate(295deg);
+    /* The rest is workaround to chromium bug #551420 */
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    top: 0;
+    left: 0;
+    line-height: 32px;
+    text-align: center;
+    padding: 0;
+    margin-left: -3px;
+    margin-top: -3px;
+    transform: scale(0.5);
+    font-size: 28px;
+}
+
+.small-button:hover>div {
+    filter: grayscale(1) brightness(1.6) contrast(5);
+}
+
+.button {
+    background-color: var(--p-bg);
+    transition: background-color 0.2s;
+    border: solid var(--accent) 2px;
+    color: var(--accent);
+    box-sizing: border-box;
+}
+
+.button:hover {
+    background-color: var(--accent);
+    color: var(--p-fg);
+}
+
+#about-container,
+#cookies-container,
+#tutorial-container {
+    position: fixed;
+    background-color: var(--p-bg);
+    border-radius: 16px;
+    padding: 24px;
+    box-sizing: border-box;
+    animation: show 0.2s;
+    overflow-y: scroll;
+    box-shadow: var(--shadow) 0 2px 16px;
+    font-weight: lighter;
+    z-index: 3;
+    font-size:x-large;
+}
+
+#cookies-container,
+#tutorial-container {
+    top: 5vh;
+    height: 79vh;
+    width: 90vw;
+    max-width: 1000px;
+    left: 5vw;
+    word-wrap: break-word;
+}
+
+@media screen and (min-width: 1111px) {
+  #cookies-container,
+	#tutorial-container	{
+        left: calc(50vw - 500px);
+    }
+}
+
+
+
+#cookies-container>button,
+#tutorial-container>button {
+    position: fixed;
+    left: calc(50vw - 15px);
+    top: calc(90vh - 115px);
+}
+
+#cookies-container,
+#tutorial-container {
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 70px;
+}
+
+#cookie-wrapper,
+#tutorial-wrapper {
+    overflow-y: scroll;
+    height: 100%;
+    width: 100%;
+    max-width: 1000px;
+}
+
+#tutorial-wrapper {
+    color: white;
+    font-size: medium;
+}
+
+h1{
+    color:white;
+    font-size: xx-large;
+    font-weight: bold;
+}
+
+h2{
+    color:white;
+    font-size: x-large;
+    font-weight: 700;
+}
+
+h3{
+    color:white;
+    font-weight:700;
+}
+
+#about-container {
+    top: 20vh;
+    height: 450px;
+    width: 600px;
+    left: calc(50vw - 300px);
+    padding-left: 39px;
+    padding-right: 39px;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+#about-container::first-line {
+    font-weight: normal;
+    font-size: 20px;
+}
+
+#about-container>button {
+    position: absolute;
+    margin-left: calc(50% - 15px);
+    bottom: 20px;
+    left: 0;
+}
+
+#about-wrapper {
+    color: white;
+}
