Improve Content Layout

--- a/web/src/components/User/Login/Login.css
+++ b/web/src/components/User/Login/Login.css
@@ -14,8 +14,7 @@
     display: flex;
     position: relative;
     flex-flow: column nowrap;
-    max-width: 100%;
-    width: 100%;
+    width: 100vw;
     margin: 0 auto;
     min-height: 100vh;
   }
@@ -29,22 +28,23 @@
     position: absolute;
     margin: 0 auto;
     top: 33vh;
-    left: 0px;
+    left: 0;
     right: 0;
     height: 300px;
-    width: 500px;
+    width: 400px;
     z-index: 1;
     flex-flow: column nowrap;
     justify-content: center;
     padding: 36px;
     background-color: #333;
     box-shadow:2px 2px 10px 2px;
+    text-align: center;
 }
 
 #auth-option-wrapper {
     display: flex;
-    width: 300px;
-    flex-direction: row;
+    width: 100%;
+    top:1px;
     overflow: hidden;
     border-radius: 8px;
     border: solid var(--accent) 2px;
@@ -75,6 +75,8 @@
     background-color: var(--accent);
 }
 
+
+
 input {
     background-color: transparent;
     width: 25%;
@@ -95,30 +97,51 @@ input:focus {
     border-bottom: solid 2px var(--accent);
 }
 
-
-
-#email-code-input {
-    width: 198px;
+#email-input {
+    width: 25%;
 }
 
 #email-suffix {
-    position: absolute;
-    top: 10%;
-    left: 80px;
-    size: 2cm;
     color: #C0C0C0;
+    font-size: large;
 }
 
 #email-code-button {
-    position:absolute;
-    top:10%;
-    left:205px;
     margin-left: 8px;
     width: 56px;
     border-radius: 10px;
     color: #C0C0C0;
     font-size: large;
 }
+
+#email-code-input {
+    width: 60%;
+}
+
+#email-login-button {
+    
+    left: 69%;
+    margin-left: 8px;
+    width: 45px;
+    box-sizing:content-box;
+    text-align: center;
+    border-radius: 10px;
+    color: var(--p-fg);
+    font-size: large;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    padding-left: 3px;
+    padding-right: 3px;
+    border: solid var(--accent) 2px;
+}
+ 
+
+#email-login-button:hover {
+    background-color: var(--accent);
+    color: var(--p-fg);
+}
+
+
 
 #countdown {
     position:absolute;
@@ -131,23 +154,12 @@ input:focus {
     font-size: large;
 }
 
-#email-login-button {
-    display: absolute;
-    margin-left: 8px;
-    width:45px;
-    box-sizing:content-box;
-    text-align: center;
-    font-size: large;
-    border-radius: 10px;
-    padding-top: 3px;
-    padding-bottom: 3px;
-    border: solid var(--accent) 2px;
-    color: var(--p-fg);
-}
 
-#email-login-button:hover {
-    background-color: var(--accent);
-    color: var(--p-fg);
+
+#google-login{
+    width: 70%;
+    margin-left: 15%;
+    margin-top: 5%;
 }
 
 
